--- a/views/createPost.ejs
+++ b/views/createPost.ejs
@@ -1,3 +1,7 @@
+<% if (messages.msg) { %>
+    <h4 style="color: rgb(40, 82, 6);text-align: center;"><%= messages.msg %>  </h4>
+<% } %>
+
 <div class="content">
 
 
