--- a/views/stylesheets/style.css
+++ b/views/stylesheets/style.css
@@ -1,18 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
-    <style>
         body{
-            font-family: 'Otomanopee One', sans-serif;
-            font-size: small;
-        }
+                font-family: 'Otomanopee One', sans-serif;
+                font-size: small;
+            }
+
         .bar{
             
             width:80%;
@@ -94,12 +84,18 @@
             padding: 5px;
             font-weight: 400;
             width: 80%;
+           
   
         }
+       
+        ::-webkit-input-placeholder{
+           font-family: 'Otomanopee One', sans-serif;
+           font-size: small;
+        }
         
+       
         input[type=submit] {
-            
-            display: flex;
+            display: flex;   
             box-shadow: slateblue 1px 1px 5px 1px;
             border: slateblue;
             border-radius: 10px;
@@ -108,6 +104,9 @@
             padding: 5px;
             width: 30%;
             justify-content: center;
+            font-family: 'Otomanopee One', sans-serif;
+            font-size: small;
+            
         }
         input[type=submit]:active{
             transform: scale(0.8);
@@ -119,6 +118,7 @@
             margin: 10px 20px;
             padding: 5px;
             justify-content: flex-start;
+            
         }
         .form-right{
             width: 50%;
@@ -128,6 +128,7 @@
         section{
             width: 80%;
             margin: 40px auto;
+            
             
         }
         ol li{
@@ -190,6 +191,21 @@
             border-radius: 30px;
             padding: 3px 50px 3px 10px;
         }
+        select{
+            width: 100%;
+            height:40px;
+            box-shadow: slateblue 1px 1px 5px 1px;
+            border: slateblue;
+            margin: 10px 20px;
+            padding: 5px;
+            background-color: transparent;
+            outline: none;
+            border-radius: 10px;
+            font-family:'Otomanopee One', sans-serif;
+            color: rgb(100, 99, 99);
+            font-size: small;
+
+        }
         
         .search-box {
         background-color: transparent;
@@ -201,7 +217,6 @@
 
         }
 
-       
     .utils{
         display: flex;
         align-items: center;
@@ -219,10 +234,11 @@
         width: 90%;
         border-radius: 10px;
         padding: 10px;
+        
     }
    
     .logo-gradient{
-        background: -webkit-linear-gradient(rgb(240, 227, 44), rgb(177, 172, 172));
+        background: -webkit-linear-gradient(rgb(243, 243, 46), rgb(177, 172, 172));
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
@@ -242,55 +258,38 @@
         resize: none;
         outline: none;
     }
+    input:focus{
+        border: none;
+        background-color: transparent;
+        resize: none;
+        outline: none;
+    }
+    img{
+        vertical-align: middle;
+    }
+    
+    h1.main-heading{
+        color: rgb(245, 229, 6);
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: rgb(28, 27, 36);
+        font-size: 40px;
+        line-height: 80%;
 
-        
-    </style>
-</head>
-<body>
-    <header>
-        <div class="bar">
-            <img src="/nv.png" height="8%" width="8%">
-            <div class="heading1">
-                <h1 class="logo-gradient">Blogs</h1>
-            </div>
-
-            <div class="heading2">
-                <ul>
-                    <li>
-                        <a href = '/dashboard'> Welcome <%= name %>  </a>
-                    </li>
-                    
-                    <li>
-                        <% if(request.isAuthenticated() && request.user.is_author) { %>
-                            
-                                <a href='/createPost'>
-                                    Create
-                                </a>
-                            
-                        <% } %>
-                    </li>
-
-                    <li>
-                        <a href='/logout'> Logout</a>
-                    </li>
-
-                </ul>
-            </div>
-        </div>
-    </header>
-
-    <div class="logo">
-        <h1 style="color: rgb(236, 227, 146);">
-            NV Blogs
-        </h1>
-        <h2 style="color: rgb(236, 227, 146);">
-            Share your Thoughts
-        </h2>
-    </div>
-
-    <section>
-        <%- body %> 
-        
-    </section>
-</body>
-</html>
+    }
+    h1.sub{
+        font-size: 30px;
+    }
+    footer{
+        width: 100%;
+        position: relative;
+        bottom:0;
+        height:7%;
+        background: rgb(198, 193, 241);
+        text-align: center;
+    }
+    button{
+        background: transparent;
+        box-shadow: slateblue 2px 2px 5px 1px;
+        border: slateblue 1px solid;
+        border-radius: 5px;
+    }
