--- a/views/userDashboard.ejs
+++ b/views/userDashboard.ejs
@@ -1,3 +1,12 @@
 
+<%- include('./partials/utils.ejs')%> 
 
-<%- include('./partials/allPostRender.ejs')%> 
+<% if (messages.msg) { %>
+    <h4 style="color: rgb(40, 82, 6);text-align: center;"><%= messages.msg %>  </h4>
+<% } %>
+
+<%- include('./partials/postBody.ejs') %>
+       
+
+
+</div>
