--- a/views/welcomePage.ejs
+++ b/views/welcomePage.ejs
@@ -1,3 +1,3 @@
 
-
-<%- include('./partials/allPostRender.ejs')%> 
+<%- include('./partials/utils.ejs') %> 
+<%- include('./partials/postBody.ejs')%> 
